@@ -5,6 +5,8 @@ devel
 + add auto_t feature for simann, enable with "anneal_temp auto"
 + the error sum is now calculated as w*d^2 and no longer as (w*d)^2
 + added the proper citations to most of the analytic potential functions
++ [APOT] the pohlong potential has been renamed to "bjs" to credit the original author
+  pohlong can still be used for compability with older potential files
 
 devel-20110331
 + adjust copyright years to 2011
